added SAX reader made portable input/output aspects for encoder updated tests